--- a/obs/planificationHTML/styles.css
+++ b/obs/planificationHTML/styles.css
@@ -9,12 +9,19 @@ body {
 
 .container {
     width: 250px; /* Set the width of the container */
-    height: 915px; /* Set the height of the container */
+    height: 918px; /* Set the height of the container */
     overflow: hidden;
     position: relative;
 }
 
+.viewport {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 ul {
+    width: 100%;
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -26,6 +33,13 @@ li {
     margin-top: 0px; /* Adjust as needed */
     color: rgb(255, 255, 255);
     white-space: nowrap; /* Prevent line breaks */
+    
+    height: 23px;
+}
+
+/* Hide scrollbar for the viewport (optional) */
+.viewport::-webkit-scrollbar {
+    width: 0;
 }
 
 .scrollable {
