Fixed font on linyx by adding the .ttf file. Now it doesn't neccesary need to be installed on the system.

--- a/html/styles.css
+++ b/html/styles.css
@@ -1,4 +1,10 @@
 /* styles.css */
+
+@font-face {
+    font-family: "Komika Axis Regular";
+    src: url('KOMIKAX_.ttf') format('truetype');
+}
+
 body {
     margin: 0;
     padding: 0;
